[gd_scene load_steps=4 format=3 uid="uid://bqxsay68atn16"]

[ext_resource type="Texture2D" uid="uid://cavwwvjsoldge" path="res://Scenes/Game_Menus/Login_Menu/gfx/background_login.png" id="1"]
[ext_resource type="Texture2D" uid="uid://cnbie8pwpwk6i" path="res://Scenes/Game_Menus/Login_Menu/gfx/ui_connect.png" id="2"]
[ext_resource type="Script" path="res://Scenes/Game_Menus/Login_Menu/Scripts/button_ui_connect.gd" id="3"]

[node name="Node2D" type="Node2D"]

[node name="background_login" type="Sprite2D" parent="."]
position = Vector2(425, 240)
texture = ExtResource("1")

[node name="ConnectButton" type="Button" parent="background_login"]
offset_left = 126.536
offset_top = 47.7166
offset_right = 202.536
offset_bottom = 85.7166
icon = ExtResource("2")
script = ExtResource("3")

[node name="txt_username" type="TextEdit" parent="background_login"]
offset_left = -75.8128
offset_top = -114.302
offset_right = 67.1872
offset_bottom = -80.3024
text = "q"

[node name="txt_password" type="TextEdit" parent="background_login"]
offset_left = -79.3119
offset_top = -50.1531
offset_right = 63.6881
offset_bottom = -16.1531
text = "q"

[node name="txt_IP" type="TextEdit" parent="background_login"]
offset_left = -147.0
offset_top = 16.0
offset_right = -68.0
offset_bottom = 41.0
text = "127.0.0.1"

[node name="txt_PORT" type="TextEdit" parent="background_login"]
offset_left = -49.0266
offset_top = 14.8336
offset_right = 29.9734
offset_bottom = 39.8336
text = "6317"

[node name="checkbox_save_password" type="CheckBox" parent="background_login"]
offset_left = -127.132
offset_top = -16.3289
offset_right = -103.132
offset_bottom = 7.67108
